--- a/graphics_prj.vcxproj.filters
+++ b/graphics_prj.vcxproj.filters
@@ -173,6 +173,7 @@
     <ClCompile Include="Actions\AddXORgate2.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="Xor2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Defs.H" />
@@ -308,6 +309,7 @@
     <ClInclude Include="Actions\AddXORgate2.h">
       <Filter>Actions</Filter>
     </ClInclude>
+    <ClInclude Include="Xor2.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
