--- a/graphics_prj.vcxproj
+++ b/graphics_prj.vcxproj
@@ -126,9 +126,17 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Actions\AddAND3gate3.cpp" />
     <ClCompile Include="Actions\AddANDgate2.cpp" />
+    <ClCompile Include="Actions\AddLED.cpp" />
+    <ClCompile Include="Actions\AddNAND2gate2.cpp" />
+    <ClCompile Include="Actions\AddNOR3gate3.cpp" />
+    <ClCompile Include="Actions\AddNORgate2.cpp" />
     <ClCompile Include="Actions\AddNOTgate.cpp" />
     <ClCompile Include="Actions\AddORgate2.cpp" />
+    <ClCompile Include="Actions\AddSwitch.cpp" />
+    <ClCompile Include="Actions\AddXNORgate2.cpp" />
+    <ClCompile Include="Actions\AddXOR3gate3.cpp" />
     <ClCompile Include="Actions\AddXORgate2.cpp" />
     <ClCompile Include="Actions\AddConnection.cpp" />
     <ClCompile Include="Components\AND3.cpp" />
@@ -192,9 +200,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actions\Action.h" />
+    <ClInclude Include="Actions\AddAND3gate3.h" />
     <ClInclude Include="Actions\AddANDgate2.h" />
+    <ClInclude Include="Actions\AddLED.h" />
+    <ClInclude Include="Actions\AddNAND2gate2.h" />
+    <ClInclude Include="Actions\AddNOR3gate3.h" />
+    <ClInclude Include="Actions\AddNORgate2.h" />
     <ClInclude Include="Actions\AddNOTgate.h" />
     <ClInclude Include="Actions\AddORgate2.h" />
+    <ClInclude Include="Actions\AddSwitch.h" />
+    <ClInclude Include="Actions\AddXNORgate2.h" />
+    <ClInclude Include="Actions\AddXOR3gate3.h" />
     <ClInclude Include="Actions\AddXORgate2.h" />
     <ClInclude Include="Actions\AddConnection.h" />
     <ClInclude Include="Components\AND3.h" />
