Add Select Action and images for the selected gates and switch and led

--- a/graphics_prj.vcxproj
+++ b/graphics_prj.vcxproj
@@ -198,6 +198,7 @@
     <ClCompile Include="Components\OR2.cpp" />
     <ClCompile Include="Components\Xor2.cpp" />
     <ClCompile Include="Actions\Simulate.cpp" />
+    <ClCompile Include="Actions\Select.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actions\Action.h" />
@@ -259,6 +260,7 @@
     <ClInclude Include="Components\OR2.h" />
     <ClInclude Include="Components\Xor2.h" />
     <ClInclude Include="Actions\Simulate.h" />
+    <ClInclude Include="Actions\Select.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
