--- a/graphics_prj.vcxproj
+++ b/graphics_prj.vcxproj
@@ -139,6 +139,8 @@
     <ClCompile Include="Actions\AddXOR3gate3.cpp" />
     <ClCompile Include="Actions\AddXORgate2.cpp" />
     <ClCompile Include="Actions\AddConnection.cpp" />
+    <ClCompile Include="Actions\Copy.cpp" />
+    <ClCompile Include="Actions\Paste.cpp" />
     <ClCompile Include="Components\AND3.cpp" />
     <ClCompile Include="Components\BUFFER.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
@@ -200,6 +202,9 @@
     <ClCompile Include="Actions\Simulate.cpp" />
     <ClCompile Include="Actions\Select.cpp" />
     <ClCompile Include="Actions\TruthTable.cpp" />
+    <ClCompile Include="Actions\Move.cpp" />
+    <ClCompile Include="Actions\Probing.cpp" />
+    <ClCompile Include="Actions\Validation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actions\Action.h" />
@@ -216,6 +221,8 @@
     <ClInclude Include="Actions\AddXOR3gate3.h" />
     <ClInclude Include="Actions\AddXORgate2.h" />
     <ClInclude Include="Actions\AddConnection.h" />
+    <ClInclude Include="Actions\Copy.h" />
+    <ClInclude Include="Actions\Paste.h" />
     <ClInclude Include="Components\AND3.h" />
     <ClInclude Include="Components\BUFFER.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
@@ -263,6 +270,9 @@
     <ClInclude Include="Actions\Simulate.h" />
     <ClInclude Include="Actions\Select.h" />
     <ClInclude Include="Actions\TruthTable.h" />
+    <ClInclude Include="Actions\Move.h" />
+    <ClInclude Include="Actions\Probing.h" />
+    <ClInclude Include="Actions\Validation.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
