Add Save function

--- a/graphics_prj.vcxproj
+++ b/graphics_prj.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Actions\AddConnection.cpp" />
     <ClCompile Include="Actions\Copy.cpp" />
     <ClCompile Include="Actions\Paste.cpp" />
+    <ClCompile Include="Actions\Save.cpp" />
     <ClCompile Include="Components\AND3.cpp" />
     <ClCompile Include="Components\BUFFER.cpp" />
     <ClCompile Include="CMUgraphicsLib\auxil.cpp" />
@@ -192,6 +193,7 @@
     <ClCompile Include="Components\Switch.cpp" />
     <ClCompile Include="Components\XNOR2.cpp" />
     <ClCompile Include="Components\XOR3.cpp" />
+    <ClCompile Include="Actions\Delete.cpp" />
     <ClCompile Include="GUI\Input.cpp" />
     <ClCompile Include="GUI\Output.cpp" />
     <ClCompile Include="main.cpp" />
@@ -223,6 +225,7 @@
     <ClInclude Include="Actions\AddConnection.h" />
     <ClInclude Include="Actions\Copy.h" />
     <ClInclude Include="Actions\Paste.h" />
+    <ClInclude Include="Actions\Save.h" />
     <ClInclude Include="Components\AND3.h" />
     <ClInclude Include="Components\BUFFER.h" />
     <ClInclude Include="CMUgraphicsLib\auxil.h" />
@@ -260,6 +263,7 @@
     <ClInclude Include="Components\XNOR2.h" />
     <ClInclude Include="Components\XOR3.h" />
     <ClInclude Include="Defs.H" />
+    <ClInclude Include="Actions\Delete.h" />
     <ClInclude Include="GUI\Input.h" />
     <ClInclude Include="GUI\Output.h" />
     <ClInclude Include="GUI\UI_Info.h" />
