--- a/graphics_prj.vcxproj.filters
+++ b/graphics_prj.vcxproj.filters
@@ -242,6 +242,12 @@
     <ClCompile Include="Actions\Delete.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="Actions\Load.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="Actions\Edit.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Defs.H" />
@@ -444,6 +450,12 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="Actions\Delete.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="Actions\Load.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="Actions\Edit.h">
       <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
