--- a/graphics_prj.vcxproj
+++ b/graphics_prj.vcxproj
@@ -196,7 +196,7 @@
     <ClCompile Include="Components\Switch.cpp" />
     <ClCompile Include="Components\XNOR2.cpp" />
     <ClCompile Include="Components\XOR3.cpp" />
-    <ClCompile Include="Actions\Delete.cpp" />
+    <ClCompile Include="Actions\DeleteComp.cpp" />
     <ClCompile Include="GUI\Input.cpp" />
     <ClCompile Include="GUI\Output.cpp" />
     <ClCompile Include="main.cpp" />
@@ -269,7 +269,7 @@
     <ClInclude Include="Components\XNOR2.h" />
     <ClInclude Include="Components\XOR3.h" />
     <ClInclude Include="Defs.H" />
-    <ClInclude Include="Actions\Delete.h" />
+    <ClInclude Include="Actions\DeleteComp.h" />
     <ClInclude Include="GUI\Input.h" />
     <ClInclude Include="GUI\Output.h" />
     <ClInclude Include="GUI\UI_Info.h" />
