--- a/graphics_prj.vcxproj
+++ b/graphics_prj.vcxproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <ClCompile Include="Actions\AddAND3gate3.cpp" />
     <ClCompile Include="Actions\AddANDgate2.cpp" />
+    <ClCompile Include="Actions\AddBUFFERgate.cpp" />
     <ClCompile Include="Actions\AddLED.cpp" />
     <ClCompile Include="Actions\AddNAND2gate2.cpp" />
     <ClCompile Include="Actions\AddNOR3gate3.cpp" />
@@ -196,6 +197,7 @@
     <ClCompile Include="Components\XNOR2.cpp" />
     <ClCompile Include="Components\XOR3.cpp" />
     <ClCompile Include="Actions\Delete.cpp" />
+    <ClCompile Include="Actions\Cut.cpp" />
     <ClCompile Include="GUI\Input.cpp" />
     <ClCompile Include="GUI\Output.cpp" />
     <ClCompile Include="main.cpp" />
@@ -206,7 +208,6 @@
     <ClCompile Include="Actions\Simulate.cpp" />
     <ClCompile Include="Actions\Select.cpp" />
     <ClCompile Include="Actions\TruthTable.cpp" />
-    <ClCompile Include="Actions\Move.cpp" />
     <ClCompile Include="Actions\Probing.cpp" />
     <ClCompile Include="Actions\Validation.cpp" />
   </ItemGroup>
@@ -214,6 +215,7 @@
     <ClInclude Include="Actions\Action.h" />
     <ClInclude Include="Actions\AddAND3gate3.h" />
     <ClInclude Include="Actions\AddANDgate2.h" />
+    <ClInclude Include="Actions\AddBUFFERgate.h" />
     <ClInclude Include="Actions\AddLED.h" />
     <ClInclude Include="Actions\AddNAND2gate2.h" />
     <ClInclude Include="Actions\AddNOR3gate3.h" />
@@ -266,6 +268,7 @@
     <ClInclude Include="Components\Switch.h" />
     <ClInclude Include="Components\XNOR2.h" />
     <ClInclude Include="Components\XOR3.h" />
+    <ClInclude Include="Actions\Cut.h" />
     <ClInclude Include="Defs.H" />
     <ClInclude Include="Actions\Delete.h" />
     <ClInclude Include="GUI\Input.h" />
@@ -278,7 +281,6 @@
     <ClInclude Include="Actions\Simulate.h" />
     <ClInclude Include="Actions\Select.h" />
     <ClInclude Include="Actions\TruthTable.h" />
-    <ClInclude Include="Actions\Move.h" />
     <ClInclude Include="Actions\Probing.h" />
     <ClInclude Include="Actions\Validation.h" />
   </ItemGroup>
